k8s/13-mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: hotel-platform
spec:
  clusterIP: None # headless: DNS estable para el StatefulSet
  selector:
    app: mongo
  ports:
    - port: 27017
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  namespace: hotel-platform
spec:
  serviceName: mongo
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:6
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: data
              mountPath: /data/db
            - name: init
              mountPath: /docker-entrypoint-initdb.d
              readOnly: true
          startupProbe:
            exec:
              command: ["mongosh", "--quiet", "--eval", "db.adminCommand('ping')"]
            periodSeconds: 5
            failureThreshold: 30
          readinessProbe:
            exec:
              command: ["mongosh", "--quiet", "--eval", "db.adminCommand('ping')"]
            periodSeconds: 10
            timeoutSeconds: 5
          resources:
            requests: { cpu: 250m, memory: 512Mi }
            limits: { cpu: "1", memory: 1Gi }
      volumes:
        - name: init
          configMap:
            name: mongo-init
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
